# tim

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  tim.py
tests/: test.py
