[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tim"
version = "0.1.0"
description = "A Catppuccin Mocha themed TUI Time Tracker with Vim keybindings"
authors = [{name="Mohd Adnan Malik", email="eddymalikadnan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.66.0",
    "rich>=13.0.0",
]

[project.scripts]
time-tracker = "time_tracker:main"
