[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tim-tracker"
version = "1.0.0"
description = "A beautiful time tracking CLI tool"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "rich>=13.0.0",
    "typer>=0.9.0",
    "prompt-toolkit>=3.0.0",
]

[project.scripts]
tim = "tim:app"

[tool.setuptools]
py-modules = ["tim"]
